Добавление проверки на наличие средств и откат корзины при ошибке

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ bitrix/templates/*
 !bitrix/templates/ag
 !bitrix/templates/.default
 !bitrix/components/ag
+!bitrix/.settings.php
 .install/config.ini
 .install/tmp/*
 !.install/tmp/README.txt
