ДатаМероприятия импортировать выводить в карточке товара

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-bitrix/*
+bitrix*
 upload/*
-!upload/1c_catalog
-!upload/1c_exchange
 desktop_app/*
 eshop_app/*
 auth/*
@@ -19,3 +17,16 @@ bitrix/templates/*
 .install/*
 include/*
 !include/check_store.php
+personal/*
+.access.php
+.bottom.menu.php
+.htaccess
+.integration/secret.inc.php
+.left.menu_ext.php
+.personal.menu.php
+.section.php
+.top.menu.php
+favicon.ico
+sect_bottom.php
+sect_sidebar.php
+web.config
