--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,17 @@ favicon.ico
 sect_bottom.php
 sect_sidebar.php
 web.config
+
 *.swp
-*.toc
-*.htoc
-*.log
-*.aux
-*.haux
-*.out
-*.pdf
-docs/description/exports/*
+*.swo
+
+docs/*.toc
+docs/*.htoc
+docs/*.log
+docs/*.aux
+docs/*.haux
+docs/*.out
+docs/*.pdf
+docs/*.html
+
+
