--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-bitrix*
+bitrix/*
+!bitrix/.settings.php
+!bitrix/admin/1c_exchange.php
+
+
 upload/*
+!upload/1c_exchange/*
+!upload/1c_catalog/*
+
+
 desktop_app/*
 eshop_app/*
 auth/*
@@ -7,13 +15,6 @@ login/*
 about/*
 images/*
 store/*
-!bitrix/templates
-bitrix/templates/*
-!bitrix/templates/ag
-!bitrix/templates/agnew
-!bitrix/templates/.default
-!bitrix/components/ag
-!bitrix/.settings.php
 .install/*
 include/*
 !include/check_store.php
