--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ bitrix/*
 upload/*
 !upload/1c_exchange*
 !upload/1c_catalog*
-
+upload/1c_exchange/logger/*
+upload/1c_catalog/import_files/*
 
 .install/*
 .integration/secret.inc.php
