nginx and php-fpm configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Игнорировать ядро битрикса
+# Игнорировать ядро битрикса (кроме файла обмена с 1С)
 www/bitrix/*
-!www/bitrix/.settings.php
 !www/bitrix/admin/1c_exchange.php
 
 # Игнорировать загруженные файлы
