--- a/etc/php.ini
+++ b/etc/php.ini
@@ -975,7 +975,7 @@ pdo_mysql.default_socket=
 [mail function]
 ; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
 ; http://php.net/sendmail-path
-sendmail_path = /usr/sbin/sendmail -t -i
+sendmail_path = /usr/bin/msmtp -t -i
 
 ; Force the addition of the specified parameters to be passed as extra parameters
 ; to the sendmail binary. These parameters will always replace the value of
@@ -983,7 +983,7 @@ sendmail_path = /usr/sbin/sendmail -t -i
 ;mail.force_extra_parameters =
 
 ; Add X-PHP-Originating-Script: that will include uid of the script followed by the filename
-mail.add_x_header = On
+mail.add_x_header = Off
 
 ; The path to a log file that will log all mail() calls. Log entries include
 ; the full path of the script, line number, To address and headers.
