--- a/.gitignore
+++ b/.gitignore
@@ -25,20 +25,20 @@ logs/smtplog/[0-9]*
 
 
 # Игнорировать временные файл документации
-www/docs/*.toc
-www/docs/*.htoc
-www/docs/*.log
-www/docs/*.aux
-www/docs/*.haux
-www/docs/*.out
-www/docs/*.pdf
-www/docs/*.html
-www/docs/*.png
-www/docs/*.jpg
-www/docs/manual/source/02_noauth_funcs/figures/*.pdf
-www/docs/manual/source/04_auth_funcs/figures/*.pdf
+docs/*.toc
+docs/*.htoc
+docs/*.log
+docs/*.aux
+docs/*.haux
+docs/*.out
+docs/*.pdf
+docs/*.html
+docs/*.png
+docs/*.jpg
+docs/manual/source/02_noauth_funcs/figures/*.pdf
+docs/manual/source/04_auth_funcs/figures/*.pdf
 
-# Игнорируем служебные пользовательские папки
+# Игнорируем служебные пользовательские папки и файлы
 .bash_history
 .bash_logout
 .viminfo
