--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# Игнорировать ядро битрикса (кроме файла обмена с 1С)
-www/bitrix/*
+# Игнорировать ядро битрикса 
+www/bitrix/
+# кроме файла обмена с 1С
 !www/bitrix/admin/1c_exchange.php
+# Кроме файла доп. настроек
+!www/bitrix/.settings_extra.php
+
 
 # Игнорировать загруженные файлы
 www/upload/*
