--- a/etc/php.ini
+++ b/etc/php.ini
@@ -1333,6 +1333,8 @@ bcmath.scale = 0
 ; Handler used to store/retrieve data.
 ; http://php.net/session.save-handler
 session.save_handler = files
+#session.save_handler = memcache
+
 
 ; Argument passed to save_handler.  In the case of files, this is the path
 ; where data files are stored. Note: Windows users have to change this
@@ -1365,7 +1367,10 @@ session.save_handler = files
 ; RPM note : session directory must be owned by process owner
 ; for mod_php, see /etc/httpd/conf.d/php.conf
 ; for php-fpm, see /etc/php-fpm.d/*conf
+
 session.save_path = "/home/bitrix/tmp/sessions"
+#session.save_path = "unix:///home/bitrix/tmp/memcached.sock"
+
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
@@ -1808,4 +1813,5 @@ ldap.max_links = -1
 ; End
 
 opcache.revalidate_freq = 0
+opcache.max_accelerated_files = 100000
 
