--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -122,6 +122,7 @@ http {
 	  }
 
 	  location / {
+    	    include /home/bitrix/etc/nginx/auth/*.conf;
 	    try_files  $uri $uri/ @bitrix;
 	  }
 
