hotfix mime-type

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -11,7 +11,7 @@ events {
 http {
     limit_req_zone  $binary_remote_addr zone=one:10m rate=8r/s;
     limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
-    include       /etc/nginx/mime.types;
+    include       /home/bitrix/etc/nginx/mime.types;
     default_type application/octet-stream;
     access_log /home/bitrix/logs/shop.ag.mos.ru.access.log;
     error_log /home/bitrix/logs/shop.ag.mos.ru.error.log warn;
@@ -48,11 +48,10 @@ http {
     reset_timedout_connection on;
     fastcgi_buffer_size 156k;
     fastcgi_buffers 16 156k;
-   fastcgi_read_timeout 900;
+    fastcgi_read_timeout 900;
 #
     add_header X-Frame-Options SAMEORIGIN;
     add_header Frame-Options SAMEORIGIN;
-    add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block;";
     add_header X-Content-Security-Policy "allow 'self';";
     add_header X-WebKit-CSP "allow 'self';";
@@ -182,16 +181,26 @@ http {
 
 	  location ^~ /upload/ {
 	    
-	    if (!-e $request_filename) {
-	      rewrite ^(.+)$ /index.php last;
-	    }
-
+#	    if (!-e $request_filename) {
+#	      rewrite ^(.+)$ /index.php last;
+#	    }
+	    
 	    types {
-	      text/plain text/plain php php3 php4 php5 php6 phtml pl asp aspx cgi dll exe ico shtm shtml fcg fcgi fpl asmx pht;
-	      # ie ? not shown ? why ?
-	      image/svg+xml  svg svgz;
+		text/plain php php3 php4 php5 php6 phtml pl asp aspx cgi dll exe ico shtm shtml fcg fcgi fpl asmx pht;
+		image/gif                             gif;
+		image/jpeg                            jpeg
+		image/jpeg                            jpg;
+		image/png                             png;
+		image/tiff                            tif tiff;
+		image/vnd.wap.wbmp                    wbmp;
+		image/x-icon                          ico;
+		image/x-jng                           jng;
+		image/x-ms-bmp                        bmp;
+		image/svg+xml                         svg svgz;
+		image/webp                            webp;
+		# ie ? not shown ? why ?
+		image/svg+xml  svg svgz;
 	    }
-	  
 	  }
 
 	  location = /favicon.ico {
@@ -207,7 +216,7 @@ http {
 
 	  location ~* ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar)$ {
 	    access_log off;
-	    expires max;
+	    expires 7d;
 	    error_page 404 = /404.html; #не забываем создать страницу
 	  }
 
