--- a/etc/php.ini
+++ b/etc/php.ini
@@ -1333,7 +1333,7 @@ bcmath.scale = 0
 ; Handler used to store/retrieve data.
 ; http://php.net/session.save-handler
 session.save_handler = files
-#session.save_handler = memcache
+;session.save_handler = memcache
 
 
 ; Argument passed to save_handler.  In the case of files, this is the path
@@ -1369,7 +1369,7 @@ session.save_handler = files
 ; for php-fpm, see /etc/php-fpm.d/*conf
 
 session.save_path = "/home/bitrix/tmp/sessions"
-#session.save_path = "unix:///home/bitrix/tmp/memcached.sock"
+;session.save_path = "unix:///home/bitrix/tmp/memcached.sock"
 
 
 ; Whether to use strict session mode.
