--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -1,9 +1,15 @@
 [mysqld]
+query_cache_size = 64M
+key_buffer_size = 64M
+query_cache_limit = 64M
+table_open_cache = 128
+thread_cache_size = 4
 innodb_flush_log_at_trx_commit = 2
-innodb_buffer_pool_size = 512M
+innodb_buffer_pool_size = 1024M
 innodb_flush_method=O_DIRECT
 innodb_additional_mem_pool_size=50M 
 innodb_file_io_threads=8 
 innodb_lock_wait_timeout=50 
 innodb_log_buffer_size=8M 
 sql_mode = ALLOW_INVALID_DATES
+transaction-isolation =  READ-COMMITTED
