Errors related of SCC integration

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -120,8 +120,14 @@ http {
 	    deny all;
 	  }
 
+          location /api/ {
+	    try_files  $uri $uri/ @bitrix;
+            break;
+          }
+	
+
 	  location / {
-    	    include /home/bitrix/etc/nginx/auth/*.conf;
+            include /home/bitrix/etc/nginx/auth/*.conf;
 	    try_files  $uri $uri/ @bitrix;
 	  }
 
