--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -9,8 +9,6 @@ events {
 }
 
 http {
-    limit_req_zone  $binary_remote_addr zone=one:10m rate=8r/s;
-    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
     include       /home/bitrix/etc/nginx/mime.types;
     default_type application/octet-stream;
     access_log /home/bitrix/logs/shop.ag.mos.ru.access.log;
@@ -46,9 +44,6 @@ http {
     keepalive_timeout  25;
     keepalive_requests 100;
     reset_timedout_connection on;
-    fastcgi_buffer_size 156k;
-    fastcgi_buffers 16 156k;
-    fastcgi_read_timeout 900;
 #
     add_header X-Frame-Options SAMEORIGIN;
     add_header Frame-Options SAMEORIGIN;
@@ -69,127 +64,42 @@ http {
 	# bitrix virtual host
 	# @version 1.0.1
 	server {
+	  listen 80;
+	  root /home/bitrix/www;
+	# server_name $domain;
+	  index index.php;
+	  charset utf-8;
 
 	  set $id bitrix;
 	  set $folder default;
-	  set $socket unix:/home/bitrix/tmp/www.sock;
-	  
-	  charset utf-8;
-
-	  listen 80;
-	  
-	 # nginx server_name resolution order  
-	 # ---
-	 # + exact name
-	 # + longest wildcard name starting with an asterisk, e.g. “*.example.org”
-	 # + longest wildcard name ending with an asterisk, e.g. “mail.*”
-	 # + first matching regular expression (in order of appearance in a configuration file)
-
-	 # if use $domain we maybe have some truble fro name resolution order
-	 # use real domain, not var: 
-	 # $domain !== domain.com
-	 
-	# server_name $domain;
-
-	  server_name_in_redirect off;
-
-	  # access_log /var/log/nginx/example.com.nginx.access.log main;
-	  # [ debug | info | notice | warn | error | crit ]
-	  # error_log  /var/log/nginx/error.log  info;
-	  
-	  index index.php;
-
-	  proxy_set_header X-Real-IP $remote_addr;
-	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	  proxy_set_header Host $host;
-
-
-	  # some times throw mime error in IE
-	  add_header X-Content-Type-Options nosniff;
-
-	  root /home/bitrix/www;
-
-	 # timeouts
 	  proxy_connect_timeout 600;
 	  proxy_send_timeout 600;
 	  proxy_read_timeout 600;
 	  send_timeout 600;
 
+	  proxy_set_header X-Real-IP $remote_addr;
+	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	  proxy_set_header Host $host;
 
-	  location ~ ^/bitrix/modules {
-	    deny all;
+	  server_name_in_redirect off;
+
+	###############################################
+	#  Static locations
+	###############################################
+	  location = /robots.txt {
+	    allow all;
+	    log_not_found off;
+	    access_log off;
 	  }
 
-          location /api/ {
-	    try_files  $uri $uri/ @bitrix;
-            break;
-          }
+	  location = /favicon.ico {
+	    log_not_found off;
+	    access_log off;
+	  }
+
 	
-
-	  location / {
-            include /home/bitrix/etc/nginx/auth/*.conf;
-	    try_files  $uri $uri/ @bitrix;
-	  }
-
-
-	  location @bitrix {
-
-	    fastcgi_pass     $socket;
-	    include fastcgi_params;
-	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
-	    
-	  }
-
-	  
-	  location ~ \.php$ {
-
-	    try_files $uri @bitrix;
-	    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-	    fastcgi_pass $socket;
-	    fastcgi_index index.php;
-	    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-	    # include standart 
-	    include fastcgi_params;
-	    
-	    # show real name not regexp
-	    fastcgi_param  SERVER_NAME        $host;
-	    fastcgi_read_timeout 300;
-	  }
-
-	  location @bitrix {
-
-	    fastcgi_pass     $socket;
-	    include fastcgi_params;
-	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
-	    
-	  }
-
-	  location @bitrix {
-	    fastcgi_pass     $socket;
-	    include fastcgi_params;
-	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
-	  }
-
-	  location ~* /bitrix/admin.+\.php$ {
-	    try_files $uri @bitrixadm;
-	    fastcgi_pass     $socket;
-	    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	    include /etc/nginx/fastcgi_params;
-	  }
-
-	  location @bitrixadm {
-	    fastcgi_pass     $socket;
-	    include fastcgi_params;
-	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/admin/404.php;
-	  }
-
+	# Bitrix uploaded static
 	  location ^~ /upload/ {
-	    
-#	    if (!-e $request_filename) {
-#	      rewrite ^(.+)$ /index.php last;
-#	    }
 	    
 	    types {
 		text/plain php php3 php4 php5 php6 phtml pl asp aspx cgi dll exe ico shtm shtml fcg fcgi fpl asmx pht;
@@ -207,16 +117,6 @@ http {
 	    }
 	  }
 
-	  location = /favicon.ico {
-	    log_not_found off;
-	    access_log off;
-	  }
-
-	  location = /robots.txt {
-	    allow all;
-	    log_not_found off;
-	    access_log off;
-	  }
 
 	  location ~* ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar)$ {
 	    access_log off;
@@ -224,18 +124,73 @@ http {
 	    error_page 404 = /404.html; #не забываем создать страницу
 	  }
 
+
+
+	# non http-auth location
+          location /api/ {
+	    try_files  $uri $uri/ @bitrix;
+            break;
+          }
+
+	###############################################
+	#  Denied locations
+	###############################################
 	  location ~ (/\.ht|/bitrix/modules|/upload/support/not_image|/bitrix/php_interface) {
 	    deny all;
 	  }
 
-	  location ~ /.svn/ {
-	    deny all;
-	  }
-	  
 	  # development resource in dieranet.org
 	  location ~ /(\.idea|\.ht|\.deprecated|\.git|\.dumps) {
 	    deny all;
 	  }
+
+	  location ~ ^/bitrix/modules {
+	    deny all;
+	  }
+         
+	###############################################
+	#  Dinamic locations
+	###############################################
+
+	  
+	  location ~* /bitrix/admin.+\.php$ {
+	    try_files $uri @bitrixadm;
+	    include /home/bitrix/etc/nginx/fastcgi_params;
+	  }
+
+	  location ~ \.php$ {
+	    try_files $uri @bitrix;
+	    include /home/bitrix/etc/nginx/fastcgi_params;
+	  }
+
+
+
+	###############################################
+	#  Alias locations
+	###############################################
+
+	  location @bitrixadm {
+	    include /home/bitrix/etc/nginx/fastcgi_params;
+	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/admin/404.php;
+	  }
+
+	  location @bitrix {
+	    include /home/bitrix/etc/nginx/fastcgi_params;
+	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
+	  }
+
+
+
+	###############################################
+	#  Default locations
+	###############################################
+
+	  location / {
+            include /home/bitrix/etc/nginx/auth/*.conf;
+	    try_files  $uri $uri/ @bitrix;
+	  }
+
+  
 	  
 	}
 
