--- a/etc/php-fpm.conf
+++ b/etc/php-fpm.conf
@@ -4,13 +4,14 @@ events.mechanism = epoll
 [www]
 user = bitrix
 group = bitrix
+;listen = 127.0.01:8888 
 listen = /home/bitrix/tmp/www.sock
 listen.owner = bitrix
 listen.group = bitrix
 pm = dynamic
 pm.max_children = 455
-pm.start_servers = 18
-pm.min_spare_servers = 18
-pm.max_spare_servers = 19
+pm.start_servers = 64
+pm.min_spare_servers = 64
+pm.max_spare_servers = 65
 pm.max_requests = 4000
-security.limit_extensions = .php .php3 .php4 .php5
+#security.limit_extensions = .php .php3 .php4 .php5
