--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -13,3 +13,12 @@ innodb_lock_wait_timeout=50
 innodb_log_buffer_size=8M 
 sql_mode = ALLOW_INVALID_DATES
 transaction-isolation =  READ-COMMITTED
+
+max_connections = 1000
+max_sort_length = 8
+interactive_timeout = 30
+wait_timeout = 30
+
+myisam_sort_buffer_size = 64M
+sort_buffer_size = 16M
+
