--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ docs/*.png
 docs/*.jpg
 docs/manual/source/02_noauth_funcs/figures/*.pdf
 docs/manual/source/04_auth_funcs/figures/*.pdf
+renders/png/*.png
+renders/js/*.js
 
 # Игнорируем служебные пользовательские папки и файлы
 .bash_history
