--- a/.gitignore
+++ b/.gitignore
@@ -69,11 +69,13 @@ etc/nginx/auth/*.passwd
 #Игнорировать конфиг ККБ
 www/api/include/config.php
 
-
 # Игнорировать результаты стресс-тестов и его конфиг
 tests/stress/results/*.log
 tests/stress/results/*.log.html
 tests/stress/libs/conf.pm
+
+# Игнорировать кэш QR-кодов
+www/local/libs/phpqrcode/cache
 
 # Игнорировать прочее
 *.swp
