--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,13 @@ docs/*.png
 docs/*.jpg
 docs/manual/source/02_noauth_funcs/figures/*.pdf
 docs/manual/source/04_auth_funcs/figures/*.pdf
+docs/manual/source/05_admin_funcs/figures/*.pdf
 renders/png/*.png
 renders/js/*.js
+docs/manual/source/*.idx
+docs/manual/source/*.ind
+docs/manual/source/*.ilg
+
 
 # Игнорируем служебные пользовательские папки и файлы
 .bash_history
