--- a/.gitignore
+++ b/.gitignore
@@ -47,11 +47,17 @@ docs/*.jpg
 docs/manual/source/02_noauth_funcs/figures/*.pdf
 docs/manual/source/04_auth_funcs/figures/*.pdf
 docs/manual/source/05_admin_funcs/figures/*.pdf
+docs/bcc/source/01_intro/figures/*.pdf
+docs/bcc/source/01_intro/figures/*.pdf
+
 renders/png/*.png
 renders/js/*.js
 docs/manual/source/*.idx
 docs/manual/source/*.ind
 docs/manual/source/*.ilg
+docs/bcc/source/*.idx
+docs/bcc/source/*.ind
+docs/bcc/source/*.ilg
 
 
 # Игнорируем служебные пользовательские папки и файлы
