--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -35,13 +35,13 @@ http {
     tcp_nopush     on;
     tcp_nodelay    on;
     server_tokens off;
-    client_body_timeout 30;
-    send_timeout 5;
+    client_body_timeout 3000;
+    send_timeout 3000;
     
     client_max_body_size 200M;
     client_body_buffer_size 200M;
     
-    keepalive_timeout  25;
+    keepalive_timeout  3000;
     keepalive_requests 100;
     reset_timedout_connection on;
 #
@@ -51,16 +51,22 @@ http {
     add_header X-Content-Security-Policy "allow 'self';";
     add_header X-WebKit-CSP "allow 'self';";
     add_header X-Content-Type-Options nosniff;
-#
-    gzip  on;
-    gzip_disable "MSIE [1-6]\.";
-    gzip_min_length 1100;
-    gzip_buffers 4 8k;
-    gzip_comp_level 7;
-    gzip_http_version 1.1;
-    gzip_proxied any;
-    gzip_types text/plain application/xhtml+xml text/css application/xml application/xml+rss text/javascript application/javascript application/x-javascript;
+    add_header Cache-Control max-age;
+    
+    #gzip  on;
+    #gzip_disable "MSIE [1-6]\.";
+    #gzip_min_length 1100;
+    #gzip_buffers 4 8k;
+    #gzip_comp_level 7;
+    #gzip_http_version 1.1;
+    #gzip_proxied any;
+    #gzip_types text/plain application/xhtml+xml text/css application/xml application/xml+rss text/javascript application/javascript application/x-javascript;
+    
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript application/font-woff image/svg+xml;
 
+            
 	# bitrix virtual host
 	# @version 1.0.1
 	server {
@@ -72,14 +78,16 @@ http {
 
 	  set $id bitrix;
 	  set $folder default;
-	  proxy_connect_timeout 30;
-	  proxy_send_timeout 30;
-	  proxy_read_timeout 30;
-	  send_timeout 30;
+	  proxy_connect_timeout 3000;
+	  proxy_send_timeout 3000;
+	  proxy_read_timeout 3000;
+	  send_timeout 3000;
 
 	  proxy_set_header X-Real-IP $remote_addr;
 	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	  proxy_set_header Host $host;
+
+	expires 7d;
 
 	  server_name_in_redirect off;
 
@@ -97,9 +105,16 @@ http {
 	    access_log off;
 	  }
 
+		location ~ ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar|js|css|woff)$ {
+		    access_log off;
+
+		    try_files  $uri $uri/ @bitrix;	
+		}
+
 	
 	# Bitrix uploaded static
 	  location ^~ /upload/ {
+
 	    
 	    types {
 		text/plain php php3 php4 php5 php6 phtml pl asp aspx cgi dll exe ico shtm shtml fcg fcgi fpl asmx pht;
@@ -118,16 +133,11 @@ http {
 	  }
 
 
-	  location ~* ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar)$ {
-	    access_log off;
-	    expires 7d;
-	    error_page 404 = /404.html; #не забываем создать страницу
-	  }
-
 
 
 	# non http-auth location
           location /api/ {
+            expires -1;
 	    try_files  $uri $uri/ @bitrix;
             break;
           }
@@ -154,15 +164,28 @@ http {
 
 	  
 	  location ~* /bitrix/admin.+\.php$ {
+	    expires -1;
 	    try_files $uri @bitrixadm;
 	    include /home/bitrix/etc/nginx/fastcgi_params;
 	  }
 
 	  location ~ \.php$ {
+	    expires -1;
 	    try_files $uri @bitrix;
 	    include /home/bitrix/etc/nginx/fastcgi_params;
 	  }
 
+	###############################################
+	#  Default locations
+	###############################################
+
+	 location / {
+		
+            include /home/bitrix/etc/nginx/auth/*.conf;
+            
+					            
+	    try_files  $uri $uri/ @bitrix;
+	}
 
 
 	###############################################
@@ -170,25 +193,19 @@ http {
 	###############################################
 
 	  location @bitrixadm {
+	    expires -1;
 	    include /home/bitrix/etc/nginx/fastcgi_params;
 	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/admin/404.php;
 	  }
 
 	  location @bitrix {
+	    expires -1;
 	    include /home/bitrix/etc/nginx/fastcgi_params;
 	    fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
 	  }
 
 
 
-	###############################################
-	#  Default locations
-	###############################################
-
-	  location / {
-            include /home/bitrix/etc/nginx/auth/*.conf;
-	    try_files  $uri $uri/ @bitrix;
-	  }
 
   
 	  
