--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -1,6 +1,6 @@
 [mysqld]
 query_cache_size = 64M
-key_buffer_size = 64M
+key_buffer_size = 1024M
 query_cache_limit = 64M
 table_open_cache = 128
 thread_cache_size = 64
@@ -16,9 +16,15 @@ transaction-isolation =  READ-COMMITTED
 
 max_connections = 1000
 max_sort_length = 8
-interactive_timeout = 30
-wait_timeout = 30
+interactive_timeout = 6000
+wait_timeout = 6000
 
-myisam_sort_buffer_size = 64M
-sort_buffer_size = 16M
+myisam_sort_buffer_size = 256M
+sort_buffer_size = 256M
 
+tmp_table_size = 512M
+max_heap_table_size = 256M
+read_buffer_size = 32M
+read_rnd_buffer_size = 16M
+join_buffer_size = 16M
+key_buffer = 1024M
