--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ logs/*.log
 # Игнорировать логи SMTP
 logs/maildir/[0-9]*
 logs/smtplog/[0-9]*
+logs/agapi/*
 
 
 # Игнорировать временные файл документации
