--- a/www/local/libs/composer.json
+++ b/www/local/libs/composer.json
@@ -2,7 +2,8 @@
     "require":{
         "phpmailer/phpmailer":"*",
         "aferrandini/PHPQRCode": "*",
-        "PHPOffice/PHPExcel":"*"
+        "PHPOffice/PHPExcel":"*",
+        "vladkolodka/phpMorphy":"*"
     },
     "repositories":[
         {
@@ -16,6 +17,10 @@
         {
             "type":"git",
             "url":"https://github.com/PHPOffice/PHPExcel"
+        },
+        {
+            "type":"git",
+            "url":"https://github.com/vladkolodka/phpmorphy"
         }
 
     ]
