--- a/etc/php-fpm.conf
+++ b/etc/php-fpm.conf
@@ -15,3 +15,5 @@ pm.min_spare_servers = 64
 pm.max_spare_servers = 65
 pm.max_requests = 4000
 #security.limit_extensions = .php .php3 .php4 .php5
+
+catch_workers_output = yes
