AG-1374,AG-2296,AG-1421,AG-1414

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -65,8 +65,8 @@ http {
     gzip on;
     gzip_disable "msie6";
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript application/font-woff image/svg+xml;
-
-            
+    fastcgi_cache_path /var/cache/nginx levels=1:2 keys_zone=ffcgi:1000m;
+    
 	# bitrix virtual host
 	# @version 1.0.1
 	server {
@@ -90,6 +90,14 @@ http {
 	expires 7d;
 
 	  server_name_in_redirect off;
+	  
+#	  location ~ /catalog/index.ajax.php {
+#	    default_type            text/html;
+#	    set $memcached_key      "$server_name:$request_uri";
+#	    memcached_pass localhost:11211;
+##	    memcached_pass unix:/home/bitrix/tmp/memcached.sock;
+#	    memcached_buffer_size 8K;
+#	  }
 
 	###############################################
 	#  Static locations
@@ -114,7 +122,7 @@ http {
 	
 	# Bitrix uploaded static
 	  location ^~ /upload/ {
-
+	    access_log off;
 	    
 	    types {
 		text/plain php php3 php4 php5 php6 phtml pl asp aspx cgi dll exe ico shtm shtml fcg fcgi fpl asmx pht;
@@ -162,6 +170,15 @@ http {
 	#  Dinamic locations
 	###############################################
 
+#	  location ~* index.ajax.php$ {
+#	    fastcgi_cache_key "$scheme$request_method$host$request_uri";
+#	    try_files $uri @bitrix;
+#	    include /home/bitrix/etc/nginx/fastcgi_params;
+#	    fastcgi_cache ffcgi;
+#           fastcgi_hide_header "Set-Cookie";
+#           fastcgi_ignore_headers "Cache-Control" "Expires";
+#	    fastcgi_cache_valid 200 60m;
+#	  }
 	  
 	  location ~* /bitrix/admin.+\.php$ {
 	    expires -1;
