--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -119,6 +119,13 @@ http {
 		    try_files  $uri $uri/ @bitrix;	
 		}
 
+	  location ^~ /upload/logger {
+	    access_log off;
+	    auth_basic_user_file /home/bitrix/etc/nginx/auth/auth.passwd;
+	    auth_basic           "closed site";
+	    
+	  }
+
 	
 	# Bitrix uploaded static
 	  location ^~ /upload/ {
