--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -31,6 +31,13 @@ http {
         ~(?i)(babes|click|forsale|jewelry|nudit|organic|poker|amnesty|poweroversoftware|webcam|zippo|casino|replica) 1;
     }
 
+    map $http_referer  $frame_options{
+        "~webvisor.com"     "ALLOW-FROM http://webvisor.com" ;
+        "~mc.yandex.ru"     "ALLOW-FROM https://mc.yandex.ru";
+        default "SAMEORIGIN";
+    }
+#    add_header X-Frame-Options  $frame_options ;
+
     sendfile       on;
     tcp_nopush     on;
     tcp_nodelay    on;
@@ -45,8 +52,8 @@ http {
     keepalive_requests 100;
     reset_timedout_connection on;
 #
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header Frame-Options SAMEORIGIN;
+#    add_header X-Frame-Options SAMEORIGIN;
+#    add_header Frame-Options SAMEORIGIN;
     add_header X-XSS-Protection "1; mode=block;";
     add_header X-Content-Security-Policy "allow 'self';";
     add_header X-WebKit-CSP "allow 'self';";
