ignore bitrix files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@ www/bitrix/
 # Кроме файла доп. настроек
 !www/bitrix/.settings_extra.php
 
+# игнорировать файлы битрикса в корне сайта
+www/.access.php
+www/index.php
+www/install.config
+www/license.html
+www/license.php
+www/readme.html
+www/readme.php
+www/web.config
 
 # Игнорировать загруженные файлы
 www/upload/*
