--- a/docker/php-xdebug/Dockerfile
+++ b/docker/php-xdebug/Dockerfile
@@ -5,6 +5,8 @@ libpq-dev \
 libmemcached-dev \
 curl \
 wget \
+git \
+zip \
 libjpeg-dev \
 libpng12-dev \
 libfreetype6-dev \
@@ -37,6 +39,14 @@ RUN wget https://github.com/websupport-sk/pecl-memcache/archive/NON_BLOCKING_IO_
 # Install xdebug
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
+
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+RUN php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+RUN php composer-setup.php
+RUN php -r "unlink('composer-setup.php');"
+#RUN curl -sS https://getcomposer.org/installer | php
+RUN mv composer.phar /bin/composer
+RUN composer global require fxp/composer-asset-plugin
 
 #ARG HOST_UID
 #RUN usermod -u ${HOST_UID} www-data \
