finish docker deploy

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -15,6 +15,20 @@ return-www:
 chown-www-user:
 	chown ${name}:${name} -R ../www
 
+replace-files:
+	cat ../www/index.php.replace > ../www/index.php
+	cat ../www/.access.php.replace > ../www/.access.php
+	cat ../www/.integration/secret.inc.sample.php > ../www/.integration/secret.inc.php
+	cat ../www/local/php_interface/settings.inc.sample.php > ../www/local/php_interface/settings.inc.php
+	cat ../www/api/include/config.tmpl.php > ../www/api/include/config.php
+
+copy-catalog:
+	cp -rf ../data/catalog ../www/upload/1c_catalog
+
+configure-route:
+	route del -net 172.17.0.0 netmask 255.255.0.0
+	route add -net 172.17.0.0 netmask 255.255.0.0 gateway 172.29.58.254
+
 build:
 	docker-compose -p ag-shop build
 
