--- a/docker/php-xdebug/Dockerfile
+++ b/docker/php-xdebug/Dockerfile
@@ -28,6 +28,14 @@ mysqli \
 gd \
 zip
 
+# Install Memcached for php 7
+RUN curl -L -o /tmp/memcached.tar.gz "https://github.com/php-memcached-dev/php-memcached/archive/php7.tar.gz" \
+    && mkdir -p /usr/src/php/ext/memcached \
+    && tar -C /usr/src/php/ext/memcached -zxvf /tmp/memcached.tar.gz --strip 1 \
+    && docker-php-ext-configure memcached \
+    && docker-php-ext-install memcached \
+    && rm /tmp/memcached.tar.gz
+
 RUN wget https://github.com/websupport-sk/pecl-memcache/archive/NON_BLOCKING_IO_php7.tar.gz \
 && tar -zxvf NON_BLOCKING_IO_php7.tar.gz \
 && cd pecl-memcache-NON_BLOCKING_IO_php7 \
